--- a/src/componentes/Lista_Productos/ListaProductos.css
+++ b/src/componentes/Lista_Productos/ListaProductos.css
@@ -1,9 +1,80 @@
-.contenedor{
-    display: flex;
+header{
     text-align: center;
-    justify-content: center;
+    padding: 30px 0 40px 0;
 }
 
-.titulo{
-    color: red;
+.listaProductos{ 
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    list-style: none;
+    gap: 20px;
+}
+
+/* img{
+    max-width: 100%;
+} */
+
+.item{
+    border-radius: 10px;
+}
+
+.item:hover{
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.20);
+}
+
+.item img{
+    width: 100%;
+    height: 300px;
+    object-fit:contain;
+    border-radius: 10px 10px 0 0;
+    transition: all 0.5s;
+}
+
+.container-img{
+    overflow: hidden;
+}
+
+.item:hover img{
+    transform: scale(1.05);
+}
+
+.añadir{
+    position: relative;
+    color: black;
+}
+
+.info{
+    padding: 30px 15px;
+    line-height: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.info h3{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 30px;
+    
+}
+
+.info p{
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 18px;
+    font-weight: 900;
+}
+
+.boton{
+    text-align: center;
+    background-color: #222;
+    color: #e4e4e4;
+    font-weight: 500;
+    text-decoration: none;
+    padding: 8px 5px;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+.boton:hover{
+    color: #222;
+    background-color: #e4e4e4;
 }
