--- a/src/componentes/Detalles_Producto/DetallesProducto.css
+++ b/src/componentes/Detalles_Producto/DetallesProducto.css
@@ -1,14 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body{
-    margin: 0 auto;
-}
-
-
 .container-title{
     padding: 30px;
     margin-bottom: 50px;
@@ -17,28 +6,29 @@ body{
 .container-title h2{
     font-family: 'Ubuntu';
     color: #222;
-    background-color: #eee;
+    background-color: #f0f7da;
     padding: 30px;
 }
 
-main{
+
+.detallesProducto{
     display: flex;
     gap: 30px;
     margin-bottom: 80px;
 }
 
-.container-img{
+.container-img-detalles{
     flex: 1;
     display: flex;
     justify-content: center;
 }
 
-.container-img img{
+.container-img-detalles img{
     max-width: fit-content;
-    max-height: 50%;
+    max-height: 500px;
 }
 
-.container-info{
+.container-info-detalles{
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -70,7 +60,7 @@ main{
 
 .form-group label{
     width: 100px;
-    color: #222;
+    color: #2d6073;
     font-weight: 700;
 }
 
@@ -107,7 +97,7 @@ main{
 
 .btn-add-to-cart{
     border: none;
-    background-color: #252525;
+    background-color: #65b8a6;
     padding: 10px;
     color: #f7f7f7;
     display: flex;
@@ -120,9 +110,8 @@ main{
 }
 
 .btn-add-to-cart:hover{
-    color: #222;
-    border: 1px #222;
-    background-color: #e4e4e4;
+    color: #1f192f;
+    background-color: #b5e8c3;
 }
 
 .container-description{
@@ -133,6 +122,7 @@ main{
 }
 
 .title-description{
+    color: #2d6073;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -140,7 +130,7 @@ main{
 
 .text-description{
     font-size: 13px;
-    color: #252525;
+    color: #1f192f;
     line-height: 22px;
     margin-top: 25px;
 }
