--- a/src/componentes/Footer/MiFooter.css
+++ b/src/componentes/Footer/MiFooter.css
@@ -1,4 +1,67 @@
-footer{
+.pie-pagina{
+    width: 100%;
     background-color: rgb(187, 187, 187);
-    text-align:center;
+}
+
+.pie-pagina .grupo-1{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+    padding: 45px 0px;
+}
+
+.pie-pagina .grupo-1 .box figure{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pie-pagina .grupo-1 .box figure img{
+    width: 150px;
+}
+
+.pie-pagina .grupo-1 .box h2{
+    color: #fff;
+    margin-bottom: 25px;
+    font-size: 20px;
+}
+
+.pie-pagina .grupo-1 .box p{
+    color: #efefef;
+    margin-bottom: 10px;
+}
+
+.pie-pagina .grupo-1 .social a{
+    display: inline-block;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    color: #fff;
+    margin-right: 10px;
+    background-color: #022033;
+    text-align: center;
+    border-radius: 25px;
+    transition: all 0.4s ease;
+}
+.pie-pagina .grupo-1 .social a:hover{
+    background-color: rgba(3, 49, 78, 0.604)
+}
+
+.pie-pagina .grupo-2{
+    background-color: #5a5a5a;
+    text-align: center;
+    color: #fff;
+}
+@media screen and (max-width:800px){
+    .pie-pagina .grupo-1{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 30px;
+        padding: 35px 0px;
+    }
 }
