--- a/src/componentes/Login/login.css
+++ b/src/componentes/Login/login.css
@@ -1,12 +1,38 @@
-.container{
+.container-login{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 80vh;
+    height: 100vh;
+    background: url(./img/heroHome.png);
+    background-color: #f0f7da;
+}
+
+.container-login form{
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background-color: #8ebdb6;
+}
+
+.container-login h2{
+    text-align: center;
+    font-size: 30px;
+    color: #1f192f;
+    margin-bottom: 25px;
+}
+
+.container-login label{
+    font-size: 17px;
+    color: #2d6073;
+    margin-bottom: 10px;
+    font-weight: 700;
 }
 
 .flecha{
-    color: black;
+    color: #2d6073;
     position: relative;
     top: -15px;
     left: -15px;
@@ -16,4 +42,32 @@
 
 .flecha:hover{
     color: white;
+}
+
+.btn-registrarse{
+    padding-top: 20px;
+    color: #2d6073;
+}
+
+.btn-enviar-login{
+    border: none;
+    border-radius: 25px;
+    background-color: #1f192f;
+    padding: 10px 80px;
+    color: #f7f7f7;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all 0.3s;
+    border: 1px solid #1f192f;
+    width: 100%;
+}
+
+.btn-enviar-login:hover{
+    color: #1f192f;
+    background-color: #8ebdb6;
+    border: 1px solid #1f192f;
 }
