--- a/src/componentes/Navbar/NavBar.css
+++ b/src/componentes/Navbar/NavBar.css
@@ -1,15 +1,15 @@
 .NavContainer{
-    padding: 0.4rem;
-    background-color: #464646;
+    padding: 10px;
+    background-color: #2d6073;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.NavContainer h2 {
-color: white;
-font-weight: 400;
+.logo{
+    width: 80px;
 }
+
 
 .item{
     color: white;
