--- a/src/componentes/registrarse/registrarse.css
+++ b/src/componentes/registrarse/registrarse.css
@@ -8,38 +8,44 @@ body{
 }
 
 
-.container{
+.container-register{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background-color: #f0f7da;
+    background: url(./img/heroHome.png);
 }
 
-form{
+.container-register form{
     padding: 50px;
     display: flex;
     flex-direction: column;
     width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
-    background-color: #e4e4e4;
+    background-color: #8ebdb6;
 }
 
-h2{
+.container-register h2{
     text-align: center;
     font-size: 30px;
-    color: #2E2E2E;
+    color: #1f192f;
     margin-bottom: 25px;
 }
 
-label{
+.container-register label{
     font-size: 17px;
-    color: #575757;
+    color: #2d6073;
     margin-bottom: 10px;
-    font-weight: 500;
+    font-weight: 700;
 }
 
-input{
+.checkbox-label{
+    padding-left: 10px;
+}
+
+.campo{
     padding: 17px 11px;
     border: 1px solid #252525;
     border-radius: 25px;
@@ -53,12 +59,14 @@ input{
     font-size: 15px;
     font-weight: 500;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-bottom: 10px;
 }
 
 .btn-enviar{
     border: none;
-    background-color: #252525;
-    padding: 10px 50px;
+    border-radius: 25px;
+    background-color: #1f192f;
+    padding: 10px 80px;
     color: #f7f7f7;
     display: flex;
     align-items: center;
@@ -67,11 +75,17 @@ input{
     font-weight: 700;
     cursor: pointer;
     transition: all 0.3s;
-    border: 1px solid #222;
+    border: 1px solid #1f192f;
+    width: 100%;
 }
 
 .btn-enviar:hover{
-    color: #222;
-    background-color: #e4e4e4;
-    border: 1px solid #222;
+    color: #1f192f;
+    background-color: #8ebdb6;
+    border: 1px solid #1f192f;
+}
+
+.container-btn-enviar{
+    position: relative;
+    padding-top: 15px;
 }
