--- a/src/componentes/Detalles_Producto/DetallesProducto.css
+++ b/src/componentes/Detalles_Producto/DetallesProducto.css
@@ -3,13 +3,27 @@
     margin-bottom: 50px;
 }
 
+.flecha-detalles{
+    color: black;
+    padding-right: 15px;
+    transition: all 0.3s ease;
+}
+
+.flecha-detalles:hover{
+    color: #f0f7da;
+}
+
 .container-title h2{
     font-family: 'Ubuntu';
     color: #222;
-    background-color: #f0f7da;
+    background-color: #8ebdb6;
     padding: 30px;
 }
 
+.container-detallesProducto{
+    background-color: #f0f7da;
+    height: 95vh;
+}
 
 .detallesProducto{
     display: flex;
@@ -26,6 +40,7 @@
 .container-img-detalles img{
     max-width: fit-content;
     max-height: 500px;
+    outline: 60px solid white;
 }
 
 .container-info-detalles{
@@ -106,7 +121,7 @@
     gap: 5px;
     font-weight: 700;
     cursor: pointer;
-    transition: all 0.2s;
+    transition: all 0.2s ease;
 }
 
 .btn-add-to-cart:hover{
@@ -133,4 +148,12 @@
     color: #1f192f;
     line-height: 22px;
     margin-top: 25px;
+}
+
+.container-cargando{
+    background-color: #f0f7da;
+    height: 100vh;
+    display: grid;
+    place-content: center;
+    color: #2d6073;
 }
