--- a/src/componentes/Home/home.css
+++ b/src/componentes/Home/home.css
@@ -122,7 +122,7 @@
     text-decoration: none;
     padding: 8px 5px;
     cursor: pointer;
-    transition: all 0.2s;    
+    transition: all 0.2s ease;    
 }
 
 .boton:hover{
